fix alignment of projects

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ hr {
 
 .project {
   width: 50%;
+  margin-top: 10px;
 }
 
 .projectHeading {
